	  data if no receiver field is of category numeric or numeric edited

2024-09-03  Simon Sobisch <simonsobisch@gnu.org>

	* typeck.c (cb_emit_accept): always check position
	* cobc.c, flag.def: make scope optional for -fdump

2024-09-23  David Declerck <david.declerck@ocamlpro.com>

	* pplex.l (cb_text_list): prevent duplicates

2024-08-28  David Declerck <david.declerck@ocamlpro.com>

	* tree.c (char_to_precedence_idx, get_char_type_description, valid_char_order):
	  adjusted size of precedence table and gave proper precedence to U

2024-08-06  Simon Sobisch <simonsobisch@gnu.org>

	* codegen.c (output_alphabet_name_definition): cater for national alphabet
	* typeck.c (validate_alphabet): speedup for alphabet checks
	* pplex.l (ppopen_get_file): explicit check for UTF16/UTF32 and
	  hint to use iconv

2024-08-05  Simon Sobisch <simonsobisch@gnu.org>

	* typeck.c (validate_alphabet), tree.h (cb_alphabet_name): cater for
	  national alphabets with increased size (max. 65535 instead of 255)
	* typeck.c (validate_alphabet): check that alphabet and literal types match

2024-07-29  Chuck Haatvedt <chuck.haatvedt+cobol@gmail.com>

	* tree.c (cb_build_picture): added logic to find the valid floating
	  symbol if one exists and pass that symbol to the downstream functions
	* tree.c (valid_char_order): adjust the precedence in an ambigous
	  where +$9 or 9$+ to identify the condition of the $ correctly
	  to fix bug #935
	* tree.c (find_floating_insertion_str): generate a compile error
	  if an invalid symbol is found between the float symbols; this also
	  allows the COBOL 2023 standard to be more closely followed for
	  display numeric edited picture strings
	* tree.c (char_to_precedence_idx): changed to check penultimate and last
	  symbols before the first and second symbols

2024-07-26  Simon Sobisch <simonsobisch@gnu.org>

	* parser.y, config.def: rewrite ENVIRONMENT DIVISION parsing to allow
	  non-standard order of CONFIGURATION and INPUT-OUTPUT sections,