@@ -124,6 +124,45 @@ AT_CHECK([$COBCRUN_DIRECT ./prog], [0], [], [])
 AT_CLEANUP
 
 
+AT_SETUP([XML GENERATE WITH ATTRIBUTES])
+AT_KEYWORDS([extensions])
+
+AT_SKIP_IF([test "$COB_HAS_XML2" = "no"])
+
+AT_DATA([prog.cob], [
+       IDENTIFICATION       DIVISION.
+       PROGRAM-ID.          prog.
+
+       DATA                 DIVISION.
+       WORKING-STORAGE      SECTION.
+       01  out              PIC X(200).
+       01  NSTD.
+           05  ATT1 pic x(4) value "ATT1".
+           05  CHLD1.
+               10  NSTD_ATT1 pic x(9) value "NSTD_ATT1".
+               10  NSTD_ATT2 pic x(9) value "NSTD_ATT2".
+           05  ATT2 pic x(4) value "ATT2".
+
+       PROCEDURE            DIVISION.
+           XML GENERATE out FROM NSTD WITH ATTRIBUTES
+      *                 as generated by GnuCOBOL:
+           IF   out =   '<NSTD ATT1="ATT1" ATT2="ATT2"><CHLD1 NSTD_ATT1=
+      -                 '"NSTD_ATT1" NSTD_ATT2="NSTD_ATT2"/></NSTD>'
+      *                 as generated by IBM Enterprise COBOL:
+                  OR    '<NSTD ATT1="ATT1" ATT2="ATT2"><CHLD1 NSTD_ATT1=
+      -              '"NSTD_ATT1" NSTD_ATT2="NSTD_ATT2"></CHLD1></NSTD>'
+               CONTINUE
+           ELSE
+               DISPLAY 'Test 11 failed: ' FUNCTION TRIM (out)
+           END-IF
+           GOBACK.
+])
+
+AT_CHECK([$COMPILE prog.cob], [0], [], [])
+AT_CHECK([$COBCRUN_DIRECT ./prog], [0], [], [])
+AT_CLEANUP
+
+
 AT_SETUP([XML GENERATE SUPPRESS])
 AT_KEYWORDS([extensions])
 
