@@ -1,7 +1,7 @@
 
 2025-01-10  David Declerck <david.declerck@ocamlpro.com>
 
-        * gcos-strict.conf: set init-justify to no after testing on GCOS
+	* gcos-strict.conf: set init-justify to no after testing on GCOS
 
 2024-08-17 Ammar Almoris <ammaralmorsi@gmail.com>
 
@@ -812,7 +812,7 @@
 	* default.inc, Makefile.am: New files.
 
 
-Copyright 2003,2005-2007-2010,2014-2025 Free Software Foundation, Inc.
+Copyright 2003,2005-2007-2010,2014-2024 Free Software Foundation, Inc.
 
 Copying and distribution of this file, with or without modification, are
 permitted provided the copyright notice and this notice are preserved.
